--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "docusaurus start --no-open",
-    "build": "docusaurus build",
+    "build": "docusaurus build --out-dir public",
     "serve": "docusaurus serve",
     "clear": "docusaurus clear",
     "commit": "git add . && git commit --no-edit"
