--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 
 deploy:
     provider: pages
-    local_dir: build
+    local_dir: public
     skip-cleanup: true
     github-token: $GITHUB_TOKEN
     on:
